[package]
name = "cliff"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "cliff"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# anchor-lang = { git = "https://github.com/project-serum/anchor", features = ["derive"] }
anchor-lang = { path = "/home/armaniferrante/Documents/code/src/github.com/project-serum/anchor/lang" }
anchor-spl = { path = "/home/armaniferrante/Documents/code/src/github.com/project-serum/anchor/spl" }
lockup = { path = "../lockup", features = ["cpi"] }
